@@ -5,20 +5,26 @@ import io.qameta.allure.Attachment;
 import org.apache.commons.io.*;
 import org.junit.jupiter.api.TestInfo;
 import org.openqa.selenium.OutputType;
-import org.openqa.selenium.TakesScreenshot;
 
 import java.io.File;
 import java.io.IOException;
 
-public class Print extends AppiumController {
+public class Print {
 
     public static void takeScreenShot(TestInfo info) {
+        // Skip screenshot if driver is not initialized
+        if (AppiumController.androidDriver == null && AppiumController.iOSDriver == null) {
+            return;
+        }
+        
         try {
-            // Capture screenshot as a file
-            File scrFile = ((TakesScreenshot) androidDriver).getScreenshotAs(OutputType.FILE);
-
-            // Get the byte array of the screenshot
-            final byte[] screenshot = ((TakesScreenshot) androidDriver).getScreenshotAs(OutputType.BYTES);
+            File scrFile;
+            // Capture screenshot from the appropriate driver
+            if (AppiumController.androidDriver != null) {
+                scrFile = AppiumController.androidDriver.getScreenshotAs(OutputType.FILE);
+            } else {
+                scrFile = AppiumController.iOSDriver.getScreenshotAs(OutputType.FILE);
+            }
 
             // Create a directory for storing screenshots if it doesn't exist
             File directory = new File("./evidence");
@@ -27,7 +33,7 @@ public class Print extends AppiumController {
             }
 
             // Construct the file path with the test method name
-            String filePath = String.format("./evidence/%s.png", info.getDisplayName());
+            String filePath = "./evidence/%s.png".formatted(info.getDisplayName());
 
             // Save the screenshot with the specified file name
             FileUtils.copyFile(scrFile, new File(filePath));
@@ -41,7 +47,22 @@ public class Print extends AppiumController {
 
     @Attachment(value = "Screenshot", type = "image/png")
     public static byte[] screenShot(){
-        return ((TakesScreenshot) androidDriver).getScreenshotAs(OutputType.BYTES);
+        byte[] result;
+        
+        // Skip screenshot if driver is not initialized
+        if (AppiumController.androidDriver == null && AppiumController.iOSDriver == null) {
+            result = new byte[0];
+            return result;
+        }
+        
+        // Use Android driver if available, otherwise iOS driver
+        if (AppiumController.androidDriver != null) {
+            result = AppiumController.androidDriver.getScreenshotAs(OutputType.BYTES);
+        } else {
+            result = AppiumController.iOSDriver.getScreenshotAs(OutputType.BYTES);
+        }
+        
+        return result;
     }
 
 }
